--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "badatchess",
   "version": "0.1.0",
+  "homepage": "https://rmeno12.github.io/badatchess",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -19,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@types/chess.js": "^0.13.2"
+    "@types/chess.js": "^0.13.2",
+    "gh-pages": "^4.0.0"
   }
 }
